--- a/composer.json
+++ b/composer.json
@@ -25,10 +25,10 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "zendframework/zend-eventmanager": ">=2.2.0",
+        "zendframework/zend-eventmanager": ">=2.2.0,<3.0.0",
         "zendframework/zend-json": ">=2.2.0",
         "zendframework/zend-loader": ">=2.2.0",
-        "zendframework/zend-mvc": ">=2.2.0",
+        "zendframework/zend-mvc": ">=2.2.0,<3.0.0",
         "zendframework/zend-paginator": ">=2.2.0",
         "zendframework/zend-uri": ">=2.2.0",
         "zendframework/zend-view": ">=2.2.0",
@@ -39,7 +39,7 @@
         "zendframework/zend-console": ">=2.2.0",
         "zendframework/zend-http": ">=2.2.0",
         "zendframework/zend-navigation": ">=2.2.0",
-        "zendframework/zend-servicemanager": ">=2.2.0"
+        "zendframework/zend-servicemanager": ">=2.2.0,<3.0.0"
     },
     "autoload": {
         "psr-0": {
