--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "zendframework/zend-hydrator": "^1.1"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "^4.8",
+        "phpunit/phpunit": "^4.8",
         "zendframework/zend-console": "^2.5",
         "zendframework/zend-http": "^2.5",
         "zendframework/zend-navigation": "^2.5",
@@ -44,11 +44,15 @@
     },
     "autoload": {
         "psr-0": {
-            "PhlyRestfully\\": "src/",
-            "PhlyRestfullyTest\\": "test/"
+            "PhlyRestfully\\": "src/"
         },
         "classmap": [
             "./"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "PhlyRestfullyTest\\": "test/"
+        }
     }
 }
