Better CI setup
- Use composer scripts
- Use a modern test matrix, including docker, caching, a matrix of versions, etc.

--- a/composer.json
+++ b/composer.json
@@ -52,5 +52,14 @@
         "psr-4": {
             "PhlyRestfullyTest\\": "test/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@cs",
+            "@test"
+        ],
+        "cs": "phpcs",
+        "cs-fix": "phpcbf",
+        "test": "phpunit"
     }
 }
