--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,12 @@ matrix:
     - php: hhvm
 
 before_install:
- - travis_retry composer self-update
+  - phpenv config-rm xdebug.ini || return 0
+  - travis_retry composer self-update
 
 install:
- - travis_retry composer install --no-interaction
+  - travis_retry composer install --no-interaction
 
 script:
- - composer test
- - if [[ $CS_CHECK == 'true' ]]; then composer cs ; fi
+  - composer test
+  - if [[ $CS_CHECK == 'true' ]]; then composer cs ; fi
