--- a/composer.json
+++ b/composer.json
@@ -35,11 +35,12 @@
         "zendframework/zend-stdlib": ">=2.7.0"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "3.7.*",
+        "phpunit/PHPUnit": "^5.0",
         "zendframework/zend-console": ">=2.2.0",
         "zendframework/zend-http": ">=2.2.0",
         "zendframework/zend-navigation": ">=2.2.0",
-        "zendframework/zend-servicemanager": ">=2.2.0,<3.0.0"
+        "zendframework/zend-servicemanager": ">=2.2.0,<3.0.0",
+        "friendsofphp/php-cs-fixer": "^2.10"
     },
     "autoload": {
         "psr-0": {
