--- a/.travis.yml
+++ b/.travis.yml
@@ -7,31 +7,62 @@ cache:
     - $HOME/.composer/cache
     - vendor
 
-php:
-  - 5.6
-  - 7.0
-  - 7.1
-  - 7.2
-  - nightly
+env:
+  global:
+    - COMPOSER_ARGS=""
 
-before_install:
-  - travis_retry composer self-update
+stages:
+  - coding style
+  - static code analysis
+  - test
+  - test with coverage
 
 install:
-  - travis_retry composer install --no-interaction
+  - travis_retry composer update --no-interaction --prefer-stable $COMPOSER_ARGS
 
 branches:
   only:
     master
 
 script:
-  - php -n -d memory_limit=768M ./vendor/bin/php-cs-fixer fix --dry-run -vv
-  - ./vendor/bin/phpunit --coverage-clover=./clover.xml
+  - ./vendor/bin/phpunit --no-coverage --colors
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash) -f ./clover.xml
-
-matrix:
+jobs:
   fast_finish: true
   allow_failures:
     - php: nightly
+  include:
+    - php: 5.6
+      env: COMPOSER_ARGS="--prefer-lowest"
+    - php: 5.6
+    - php: 7
+      env: COMPOSER_ARGS="--prefer-lowest"
+    - php: 7
+    - php: 7.1
+      env: COMPOSER_ARGS="--prefer-lowest"
+    - php: 7.1
+    - php: 7.2
+      env: COMPOSER_ARGS="--prefer-lowest"
+    - php: 7.2
+    - php: nightly
+      env: COMPOSER_ARGS="--ignore-platform-reqs --prefer-lowest"
+    - php: nightly
+      env: COMPOSER_ARGS="--ignore-platform-reqs"
+
+    - stage: coding style
+      php: 7.2
+      script: php -n -d memory_limit=768M ./vendor/bin/php-cs-fixer fix --dry-run -vv
+
+    - stage: static code analysis
+      php: 7.2
+      install:
+        - travis_retry composer update --no-interaction --prefer-stable $COMPOSER_ARGS
+        - travis_retry composer require phpstan/phpstan-shim:0.9.2
+      script:
+        - vendor/bin/phpstan analyse -l 7 -c phpstan.neon --autoload-file=vendor/autoload.php --memory-limit=768M --no-progress src
+        - vendor/bin/psalm --show-info=false
+
+    - stage: test with coverage
+      php: 7.2
+      script: ./vendor/bin/phpunit --colors --coverage-clover=./clover.xml
+      after_success: bash <(curl -s https://codecov.io/bash) -f ./clover.xml
