adding shepherd to build, setting psalm level, adding badges to readme

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
             - name: PHPStan
               run: composer phpstan
             - name: Psalm
-              run: composer psalm -- --output-format=checkstyle | cs2pr
+              run: composer psalm -- --output-format=checkstyle --shepherd | cs2pr
             - name: Code Style Check
               run: composer style-check -- --format=checkstyle | cs2pr
             - name: Test
