--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,15 +13,8 @@ jobs:
             fail-fast: false
             matrix:
                 operating-system: [ubuntu-latest]
-                php-versions: ['7.3', '7.4']
+                php-versions: ['7.4', '8.0', '8.1']
                 composer-args: ['', '--prefer-lowest']
-                include:
-                    - operating-system: ubuntu-latest
-                      php-versions: '8.0'
-                      composer-args: '--ignore-platform-reqs --no-scripts'
-                    - operating-system: ubuntu-latest
-                      php-versions: '8.0'
-                      composer-args: '--prefer-lowest --ignore-platform-reqs --no-scripts'
         runs-on: ${{ matrix.operating-system }}
         steps:
             - name: Checkout
