--- a/composer.json
+++ b/composer.json
@@ -21,25 +21,25 @@
         "container-interop/container-interop": "^1.2",
         "laminas/laminas-eventmanager": "^3.0",
         "laminas/laminas-http": "^2.14",
-        "laminas/laminas-hydrator": "^2.4.2",
-        "laminas/laminas-json": "^2.5.0|^3.0.0",
+        "laminas/laminas-hydrator": "^3.0.0",
+        "laminas/laminas-json": "^2.5.0 || ^3.0.0",
         "laminas/laminas-loader": "^2.5.0",
-        "laminas/laminas-mvc": "^2.7.15",
+        "laminas/laminas-mvc": "^3.0.0",
         "laminas/laminas-paginator": "^2.5.0",
         "laminas/laminas-servicemanager": "^3.4",
         "laminas/laminas-stdlib": "^3.2.1",
         "laminas/laminas-uri": "^2.5.0",
         "laminas/laminas-view": "^2.11.4",
-        "php": "^7.3 || ^8.0"
+        "php": "^7.4 || ~8.0.0 || ~8.1.0"
     },
     "require-dev": {
-        "laminas/laminas-console": "^2.5",
+        "laminas/laminas-cli": "^1.4.0",
         "laminas/laminas-db": "^2.11",
         "laminas/laminas-navigation": "^2.5",
         "friendsofphp/php-cs-fixer": "2.18.4",
         "phpunit/phpunit": "^8.5.15 || ^9.0.0",
-        "vimeo/psalm": "4.7.0",
-        "phpstan/phpstan": "0.12.83",
+        "vimeo/psalm": "4.19.0",
+        "phpstan/phpstan": "1.4.4",
         "maglnet/composer-require-checker": "^2.0 || ^3.0",
         "phpro/grumphp-shim": "^0.22.0 || ^1.1"
     },
